--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -18,4 +18,9 @@
         android:id="@+id/storeFragment"
         android:icon="@drawable/store"
         android:title="@string/store" />
+
+    <item
+        android:id="@+id/favoritesFragment2"
+        android:icon="@drawable/ic_fav"
+        android:title="Favorites" />
 </menu>
