--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -17,7 +17,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/poppins"
-        android:text="Favorites"
+        android:text="@string/favorites"
         android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
