--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -22,5 +22,5 @@
     <item
         android:id="@+id/favoritesFragment2"
         android:icon="@drawable/ic_fav"
-        android:title="Favorites" />
+        android:title="@string/favorites" />
 </menu>
