--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -16,11 +16,12 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
+        android:textAlignment="center"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/poppins"
-        android:hint="Enter your phone"
+        android:hint="@string/enter_your_phone"
         android:importantForAutofill="no"
         android:inputType="phone"
         android:minHeight="48dp"
@@ -45,7 +46,7 @@
         android:layout_marginBottom="208dp"
         android:backgroundTint="#7B61FF"
         android:fontFamily="@font/poppins"
-        android:text="Get OTP"
+        android:text="@string/get_otp"
         android:textAllCaps="false"
         android:textSize="20sp"
         app:cornerRadius="50dp"
@@ -56,6 +57,18 @@
         app:layout_constraintTop_toBottomOf="@+id/idEdtPhoneNumber"
         app:rippleColor="@color/under" />
 
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_back" />
+
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/idEdtOtp"
         android:layout_width="match_parent"
@@ -65,14 +78,17 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:fontFamily="@font/poppins"
-        android:hint="Enter OTP"
         android:importantForAutofill="no"
         android:inputType="phone"
+        android:textAlignment="center"
+        android:maxLength="6"
         android:minHeight="48dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:textSize="20sp"
+        android:textSize="50sp"
+        android:letterSpacing="0.5"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idBtnGetOtp" />
@@ -87,8 +103,9 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="10dp"
         android:backgroundTint="#7B61FF"
+        android:visibility="gone"
         android:fontFamily="@font/poppins"
-        android:text="Verify OTP"
+        android:text="@string/verify_otp"
         android:textAllCaps="false"
         android:textSize="20sp"
         app:cornerRadius="50dp"
