--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,10 +26,10 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/ivMenuIcon"
-            android:layout_width="16dp"
+            android:layout_width="20dp"
             android:layout_height="24dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="36dp"
             android:background="@drawable/ic_menu"
             android:padding="10dp"
             android:tint="@color/black"
@@ -116,10 +116,10 @@
             android:id="@+id/imageView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="52dp"
             android:src="@drawable/frame0"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintHorizontal_bias="0.557"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivMenuIcon" />
 
@@ -130,7 +130,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="32dp"
-            android:src="@drawable/frame2"
+            android:src="@drawable/total_goals"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView11"
             app:layout_constraintTop_toBottomOf="@+id/imageView9" />
