--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -77,6 +77,9 @@
         <action
             android:id="@+id/action_homeFragment_to_favoritesFragment2"
             app:destination="@id/favoritesFragment2" />
+        <action
+            android:id="@+id/action_homeFragment_to_nutritionFragment"
+            app:destination="@id/nutritionFragment" />
     </fragment>
     <fragment
         android:id="@+id/storeFragment"
@@ -143,6 +146,7 @@
             android:id="@+id/action_orderFragment_to_storeFragment"
             app:destination="@id/storeFragment"
             app:enterAnim="@anim/back_anim" />
+
     </fragment>
     <fragment
         android:id="@+id/nutritionFragment"
@@ -153,5 +157,9 @@
         android:id="@+id/favoritesFragment2"
         android:name="com.example.tbc_final.presentation.favorites.FavoritesFragment"
         android:label="fragment_favorites"
-        tools:layout="@layout/fragment_favorites" />
+        tools:layout="@layout/fragment_favorites" >
+        <action
+            android:id="@+id/action_favoritesFragment2_to_orderFragment"
+            app:destination="@id/orderFragment" />
+    </fragment>
 </navigation>
